Day2/Ch01/kubernetes-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-test
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-test
    spec:
      containers:
      - image: 255380800200.dkr.ecr.ap-southeast-1.amazonaws.com/skt-user10:latest
        imagePullPolicy: Always
        name: app-test
        ports:
          - containerPort: 80
